<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_diarios"
            android:icon="@mipmap/ic_card_travel_black_24dp"
            android:title="@string/viajes_diarios" />

        <item
            android:id="@+id/nav_historial"
            android:icon="@mipmap/ic_history_black_24dp"
            android:title="@string/historial_de_viajes" />
    </group>

    <item android:title="@string/adrministracion">
        <menu>
            <item
                android:id="@+id/nav_configuracion_cuenta"
                android:icon="@mipmap/ic_account_circle_black_24dp"
                android:title="@string/configuracion_del_perfil" />
            <item
                android:id="@+id/nav_configuracion"
                android:icon="@mipmap/ic_settings_black_24dp"
                android:title="@string/configuracion" />
            <item
                android:id="@+id/nav_informacion"
                android:icon="@mipmap/ic_info_black_24dp"
                android:title="@string/informacion" />
            <item
                android:id="@+id/nav_cerrar"
                android:icon="@mipmap/ic_exit_to_app_black_24dp"
                android:title="@string/cerrar_sesion" />
        </menu>
    </item>

</menu>
