<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LayoutThemeCoordinator"
    tools:context=".ClasesViews.RegistroUsuarioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/registro_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="@dimen/elevation_toolbar"
            android:title="@string/crear"
            android:background="?attr/colorPrimary"
            app:layout_collapseMode="pin" />

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/registro_nestedScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout style="@style/ChildLayputScroll">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/registro_textLayout_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        style="@style/EditTextBlack"
                        android:drawableLeft="@mipmap/ic_account_circle_black_24dp"
                        android:hint="@string/hint_nombre"
                        android:inputType="textPersonName" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/registro_textLayout_apellidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        style="@style/EditTextBlack"
                        android:drawableLeft="@mipmap/ic_people_black_24dp"
                        android:hint="@string/hint_appelido"
                        android:inputType="textPersonName" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/registro_textLayout_correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        style="@style/EditTextBlack"
                        android:drawableLeft="@mipmap/ic_email_black_24dp"
                        android:hint="@string/hint_correo_principal"
                        android:inputType="textEmailAddress" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/registro_textLayout_telefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        style="@style/EditTextBlack"
                        android:drawableLeft="@mipmap/ic_phone_black_24dp"
                        android:hint="@string/hint_telefono"
                        android:inputType="phone"
                        android:maxLength="10" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/iregistro_textLayout_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        style="@style/EditTextBlack"
                        android:drawableLeft="@mipmap/ic_https_black_24dp"
                        android:hint="@string/hint_appelido"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/registro_textLayout_confPAss"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        style="@style/EditTextBlack"
                        android:drawableLeft="@mipmap/ic_done_all_black_24dp"
                        android:hint="@string/hint_password_conf"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>


                <TextView
                    android:id="@+id/crear_tv_terminos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:drawableLeft="@mipmap/ic_library_books_black_24dp"
                    android:paddingTop="@dimen/padding_elements_big"
                    android:text="@string/crear_terminos"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorPrimary" />

                <CheckBox
                    android:id="@+id/crear_chb_terminos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:checked="false"
                    android:paddingTop="@dimen/padding_elements"
                    android:text="@string/crear_terminos_aceptar" />

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>