<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LayoutThemeCoordinator"
    android:background="@drawable/fondo_inicial"
    tools:context=".ClasesViews.PantallaInicialActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/inicial_btn_crear"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crear_cuenta"
            android:textColor="@color/colorPrincipalTextWhite"
            android:textSize="@dimen/small_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logoPrincipal"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_avanti" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inicial_textLayout_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                style="@style/EditTextWhite"
                android:drawableLeft="@mipmap/ic_email_black_24dp"
                android:hint="@string/hint_correo_principal"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inicial_textLayout_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/inicial_et_password"
                style="@style/EditTextWhite"
                android:drawableLeft="@mipmap/ic_https_black_24dp"
                android:hint="@string/hint_password_principal"
                android:inputType="textPassword"
                android:maxLength="16" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_elements_big">

        <Button
            android:id="@+id/inicial_btn_entrar"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/padding_elements_big"
            android:layout_marginRight="@dimen/padding_elements_big"
            android:background="@color/colorPrimary"
            android:text="@string/text_button_principal"
            android:textColor="@color/colorPrincipalTextBlack"
            android:textSize="@dimen/small_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/padding_elements">

        <Button
            android:id="@+id/inicial_btn_reset"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_reset_password"
            android:textColor="@color/colorPrincipalTextWhite"
            android:textSize="@dimen/small_text" />
    </LinearLayout>


</LinearLayout>